fix(tags): Tag overflow if tag name too large

--- a/app/modules/components/issues-table/issues/issues-table.scss
+++ b/app/modules/components/issues-table/issues/issues-table.scss
@@ -108,7 +108,6 @@
     }
     .issue-text {
         display: flex;
-        margin-top: .5rem;
     }
     .subject {
         flex: 1;
@@ -119,6 +118,7 @@
             cursor: pointer;
             display: flex;
             flex-wrap: wrap;
+            gap: .25rem;
         }
         &:hover {
             .issue-ref {
@@ -146,7 +146,6 @@
             display: inline-flex;
             justify-content: center;
             margin-inline-end: .75rem;
-            margin-top: .5rem;
             vertical-align: middle;
             .icon {
                 fill: $color-link-red;
@@ -159,11 +158,11 @@
             display: inline-block;
         }
         .tag {
-            align-items: center;
-            display: inline-flex;
-            justify-content: center;
-            margin-top: .5rem;
-            max-height: 20px;
+            display: block;
+            max-width: 17ch;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
             &.last {
                 margin-inline-end: .75rem;
             }
